[package]

name = "github"
version = "0.1.0"
description = "Rust based library for interacting with the Github v3 API."
readme = "README.md"
repository = "https://github.com/davidrhyswhite/rust-github"
documentation = "http://ironframework.io/doc/iron/"
license = "MIT"
authors = ["David White <david.white@spry-soft.com>"]

[dependencies]
curl = "0.2"
rustc-serialize = "0.3"
