[package]

name = "rust-github"
version = "0.1.1"
description = "Rust based library for interacting with the Github v3 API."
readme = "README.md"
repository = "https://github.com/davidrhyswhite/rust-github"
license = "MIT"
authors = ["David White <david.white@spry-soft.com>"]

[dependencies]
curl = "0.2"
rustc-serialize = "0.3"
